Closed Bug 1299792 Opened 9 years ago Closed 9 years ago

ssl3_PickServerSignatureScheme() shouldn't send alerts

Categories

(NSS :: Libraries, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: ttaubert, Assigned: ttaubert)

References

Details

ssl3_PickServerSignatureScheme() is called by ssl3_SelectServerCert(). All call sites of the latter in ssl3con.c send alerts on failure, so ssl3_PickServerSignatureScheme() shouldn't send more alerts. In tls13con.c we can end up with no alert because that relies on ssl3_SelectServerCert() sending those, but that doesn't send any in case we can't find a good matchin ss->serverCerts.
Flags: needinfo?(martin.thomson)
Flags: needinfo?(ekr)
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Flags: needinfo?(martin.thomson)
Flags: needinfo?(ekr)
Resolution: --- → FIXED
Target Milestone: --- → 3.27
You need to log in before you can comment on or make changes to this bug.