Bug 1299792 - ssl3_PickServerSignatureScheme() shouldn't send alerts r=mt